# ai-harness

./: .gitignore  AGENTS.md  CODING-PREFERENCES.md  FUTURE.md  README.md  skills-lock.json
ai/: ARCHITECTURE.md  DESIGN.md  DESIGN_MEMORIES.md  Dockerfile  SOUL.md  justfile  main.py  pyproject.toml  testing.env
ai/docs/: gateway.md
ai/evals/: README.md  financial_qa_golden.yaml
ai/evals/financebench/: README.md  __init__.py  load_dataset.py  metrics.py  schema.py
ai/example/: client_ws.py
ai/personalities/: codereviewer.md  criticise.md  default.md
ai/src/ai/: HUMAN_REVIEW.md  TODO.md  config.py  const.py  context.py  main.py
ai/src/ai/agent/: __init__.py  context_files.py  loop.py  modes.py  personality.py  progress.py  prompt_builder.py  (+1 more)
ai/tests/: conftest.py  test_agent_loop.py  test_agent_runner.py  test_auth_jwt.py  test_auto_dream_gates.py  test_bridge_conflict_resolution.py  test_bridge_memories.py  test_bridge_rules.py  test_bridge_spaces.py  test_bridge_valuations.py  test_cli_smoke.py  test_consolidation_lock.py  test_context_files_loader.py  test_council.py  test_dream_runner.py  test_evals_smoke.py  test_extract_memories.py  test_financebench_eval_optional.py  test_financebench_loader_smoke.py  test_financial_golden_schema.py  test_gateway_forwarder.py  test_gateway_neonize_stub.py  test_hooks.py  test_idempotency_automation_run.py  test_mcp_bridge_mock.py  test_memory_budget.py  test_memory_decay.py  test_monitors_tool.py  test_para_memory.py  test_personality_loader.py  test_prompt_builder.py  test_provider_router.py  test_route_registry.py  test_routes_actions.py  test_routes_memory.py  test_routes_spaces.py  test_rules_cache.py  test_schema_normalize.py  test_skill_eligibility.py  test_skill_review_hook.py  (+16 more)
ai/tests/fixtures/: financebench_documents_sample.jsonl  financebench_sample.jsonl
(+202 files in other folders)
